Bug 617737 - white space handling incorrect r+a=roc