layout/svg/base/src/nsSVGGlyphFrame.h
@@ -171,6 +171,7 @@ public:
   NS_IMETHOD_(nsISVGGlyphFragmentLeaf *) GetFirstGlyphFragment();
   NS_IMETHOD_(nsISVGGlyphFragmentLeaf *) GetNextGlyphFragment();
   NS_IMETHOD_(void) SetWhitespaceHandling(PRUint8 aWhitespaceHandling);
+  NS_IMETHOD_(PRBool) IsAllWhitespace();
 
 protected:
   friend class CharacterIterator;
