layout/svg/base/src/nsSVGTSpanFrame.h
@@ -93,6 +93,7 @@ public:
   NS_IMETHOD_(nsISVGGlyphFragmentLeaf *) GetFirstGlyphFragment();
   NS_IMETHOD_(nsISVGGlyphFragmentLeaf *) GetNextGlyphFragment();
   NS_IMETHOD_(void) SetWhitespaceHandling(PRUint8 aWhitespaceHandling);
+  NS_IMETHOD_(PRBool) IsAllWhitespace();
 };
 
 #endif
